# GKD-Software-2025-Test-handwriting-number

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CONFIGURE.md  README_BUILD.md  build.ps1  check_bias.cpp  check_weights.cpp  configure_and_build.bat  configure_and_build.ps1  debug_weights.cpp  install_opencv.bat  install_opencv.ps1  readme.md  run.bat  test_fc_plus.cpp  test_forward.cpp  test_nums.cpp  test_standard_digits.cpp  vcpkg.json
include/: file_reader.h  matrix.h  model.h  preprocess.h  socket_server.hpp
src/: loader.hpp  main.cpp  matrix.hpp  model.hpp  socket_client.hpp  socket_client_test.cpp  socket_server.hpp  test_nums.cpp  utils.hpp  verify_model_nums.cpp
